@@ -1,5 +1,10 @@
 2007-02-20  Akim Demaille  <demaille@gostai.com>
 
+	bison++: Preserve *output on failure
+	* bison++.in: Save it instead of leaving the previous one.
+
+2007-02-20  Akim Demaille  <demaille@gostai.com>
+
 	Count xpasses
 	* check.mk (failures): Count fails and xpasses.
 	Use it.
